--- a/styles.css
+++ b/styles.css
@@ -40,24 +40,20 @@
   margin: 20px;
 }
 
-div.container {
-  border: 5px solid #555;
-}
-
 .flex {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
+}
+
+.image {
+  border: 2px solid #333;
+  cursor: move;
+  background-size: cover;
+  background-position: center;
 }
 
 .selected {
   border: 5px solid rgb(0, 195, 255);
-}
-
-p {
-  text-align: center;
-}
-
-button {
-  margin: 20px;
 }
